Ajuste no footer das abas de tópico

--- a/app1/templates/app1/topico_cultura.html
+++ b/app1/templates/app1/topico_cultura.html
@@ -58,7 +58,7 @@
 
     <footer class="main-footer">
         <div class="container">
-            <p>&copy; {% now "Y" %} Seu Site. Todos os direitos reservados.</p>
+            <p>&copy; {% now "Y" %} 2025 JCPM. Reconstruído para fins acadêmicos.</p>
         </div>
     </footer>
 
