--- a/app1/templates/app1/topico_cultura.html
+++ b/app1/templates/app1/topico_cultura.html
@@ -13,7 +13,7 @@
         <div class="container">
             <h1 class="logo-text">Cultura</h1>
             <nav class="main-nav">
-                <a href="{% url 'home' %}">home</a>
+                <a href="{% url 'home' %}">Home</a>
                 <a href="{% url 'topico_politica' %}">Política</a>
                 <a href="{% url 'topico_pernambuco' %}">Pernambuco</a>
                 <a href="{% url 'topico_esportes' %}">Esportes</a>
