--- a/app1/templates/app1/topico_esportes.html
+++ b/app1/templates/app1/topico_esportes.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <h1 class="logo-text">Esportes</h1>
                 <nav class="main-nav">
-                    <a href="{% url 'home' %}">home</a>
+                    <a href="{% url 'home' %}">Home</a>
                     <a href="{% url 'topico_politica' %}">Política</a>
                     <a href="{% url 'topico_pernambuco' %}">Pernambuco</a>
                     <a href="{% url 'topico_cultura' %}">Cultura</a>
@@ -58,7 +58,7 @@
 
         <footer class="main-footer">
             <div class="container">
-                <p>&copy; {% now "Y" %} 2025 JCPM. Reconstruído para fins acadêmicos.</p>
+                <p>&copy; 2025 JCPM. Reconstruído para fins acadêmicos.</p>
             </div>
         </footer>
 
