--- a/app1/Static/app1/css/style.css
+++ b/app1/Static/app1/css/style.css
@@ -35,17 +35,18 @@ a:hover {
     border-bottom: 1px solid #e0e0e0;
     padding: 15px 0;
     margin-bottom: 30px;
+    
 }
 .main-header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.logo-text {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #d90429; /* Vermelho principal do JC */
-    margin: 0;
+.header-logo{
+    width: 140px;
+    height: auto;
+    max-width: 100%;
+    margin-right: 1.5rem;
 }
 .main-nav a {
     color: #333;
@@ -58,7 +59,6 @@ a:hover {
     color: #d90429;
 }
 
-/* --- ADICIONADO --- */
 /* Estilo para o botão de LOGIN no header */
 .header-login .login-btn {
     border: 1px solid #aaa;
