--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -13,7 +13,7 @@
 
     <header class="main-header">
         <div class="container">
-            <img src="{% static 'app1/assets/logo.png' %}" alt="Logo do Jornal do Commercio">
+            <img src="{% static 'app1/assets/logo.png' %}" alt="Logo do Jornal do Commercio" class="header-logo">
             
             <nav class="main-nav">
                 <a href="{% url 'home' %}">Home</a>
