--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -24,7 +24,7 @@
             </nav>
 
             <div class="header-login">
-                <a href="{% url 'login' %}" class="login-btn">LOGIN</a>
+                <a href="{% url 'login' %}" class="login-btn">Login</a>
             </div>
         </div>
     </header>
