Linkando o login com o banco de dados

--- a/app1/templates/app1/login.html
+++ b/app1/templates/app1/login.html
@@ -17,7 +17,7 @@
                 <span>ou</span>
             </div>
             
-            <a href="{% url 'login_existente' %}" class="login-btn-secondary">Faça login em uma conta existente</a>
+            <a href="{% url 'login' %}" class="login-btn-secondary">Faça login em uma conta existente</a>
 
             <p class="login-legal-text">
                 Ao fazer login, você concorda com as
