--- a/app1/Static/app1/css/style.css
+++ b/app1/Static/app1/css/style.css
@@ -8,7 +8,7 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     margin: 0;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
     color: #333;
     line-height: 1.6;
 }
@@ -49,7 +49,7 @@ a:hover {
     margin-right: 1.5rem;
 }
 .main-nav a {
-    color: #333;
+    color: #3d3d3d;
     margin-left: 25px;
     font-weight: bold;
     font-size: 1rem;
@@ -127,7 +127,7 @@ a:hover {
 }
 
 .card {
-    background-color: #ffffff;
+    background-color: #f7f9fa;
     border: 1px solid #f0f0f0;
     border-radius: 2px;
     overflow: hidden;
@@ -292,7 +292,7 @@ a:hover {
     font-size: 2.5rem;
     line-height: 1.1;
     font-weight: 700;
-    color: #111;
+    color: #353535;
     margin-top: 0;
     margin-bottom: 25px;
 }
