--- a/app1/templates/app1/login.html
+++ b/app1/templates/app1/login.html
@@ -9,15 +9,15 @@
     <div class="login-choice-container">
         
         <div class="login-col-left">
-            <h1 class="login-main-title">Fazer Login</h1>
+            <h1 class="login-main-title">Cabecinha</h1>
             
-            <a href="{% url 'cadastro' %}" class="login-btn-primary">Crie uma Conta</a>
+            <a href="{% url 'cadastro' %}" class="login-btn-primary">Criar conta</a>
             
             <div class="login-separator">
                 <span>ou</span>
             </div>
             
-            <a href="{% url 'login_existente' %}" class="login-btn-secondary">Faça login em uma conta existente</a>
+            <a href="{% url 'login_existente' %}" class="login-btn-secondary">Entrar</a>
 
             <p class="login-legal-text">
                 Ao fazer login, você concorda com as
