--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>{% block title %}Jornal do Commercio{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'app1/static/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'app1/css/style.css' %}">
 
 </head>
 <body>
