Htmls de tópico agora herdam toda a estrutura do base

--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -44,11 +44,11 @@
                     <li><a href="{% url 'topico_politica' %}">Política</a></li>
                     <li><a href="{% url 'topico_esportes' %}">Esportes</a></li>
                     <li><a href="{% url 'topico_cultura' %}">Cultura</a></li>
-                    <li><a>Ao Vivo</a>
-                    <li><a>Rádio Jornal(Recife)</a>
-                    <li><a>Rádio Jornal(Interior)</a>
-                    <li><a>TV Jornal(Recife)</a>
-                    <li><a>TV Jornal(Interior)</a>
+                    <li><a>Ao Vivo</a></li>
+                    <li><a>Rádio Jornal(Recife)</a></li>
+                    <li><a>Rádio Jornal(Interior)</a></li>
+                    <li><a>TV Jornal(Recife)</a></li>
+                    <li><a>TV Jornal(Interior)</a></li>
                 </ul>
             </nav>
     </header>
