criando a configuração para receber o convite para o newsletter

--- a/app1/templates/app1/exibir_artigo.html
+++ b/app1/templates/app1/exibir_artigo.html
@@ -19,6 +19,13 @@
     {% endif %}
 
     <main class="container">
+        <div>
+            {% if flag %}
+                <div class="congrats-message">
+                    <a>VOCÊ DESEJA PARTICIPAR DO NEWSLETTER</a>
+                </div>
+            {% endif %}
+        </div>
         
         <div class="article-content">
             
