terminando de implementar o newsletter + a sugestao com base no que ele ve

--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -59,6 +59,7 @@
                     <li><a>Rádio Jornal(Interior)</a></li>
                     <li><a>TV Jornal(Recife)</a></li>
                     <li><a>TV Jornal(Interior)</a></li>
+                    <li><a href="{% url 'newsletter' %}">Newsletter</a></li>
                 </ul>
             </nav>
     </header>
