--- a/app1/templates/app1/exibir_artigo.html
+++ b/app1/templates/app1/exibir_artigo.html
@@ -31,7 +31,7 @@
     <main class="container">
         {% if flag %}
         <div class="article-flag">
-            <a>VEJA A NOSSA OPÇÃO NEWSLETTER</a>
+            <a href="{% url 'newsletter' %}" class="read-more">VEJA A NOSSA OPÇÃO NEWSLETTER</a>
         </div>
         {% endif %}
 
